k8/deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoazure
spec:
  selector:
    matchLabels:
      app: demoazure
  replicas: 2
  template:
    metadata:
      labels:
        app: demoazure
    spec:
      containers:
        - name: demoazure
          image: haroldo89/nginx-env:1.2
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - name: http-port
              containerPort: 80
