k8/deployment-pullsecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appangular
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appangular
  template:
    metadata:
      labels:
        app: appangular
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: appangular
        image: us.gcr.io/single-archive-314821/gcf/demodevops:1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 80
