k8/deployment-with-paramters.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appangularenv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appangularenv
  template:
    metadata:
      labels:
        app: appangularenv
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: appangularenv
        image: us.gcr.io/single-archive-314821/gcf/nginx-env:1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 80
