k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appangular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appangular
  template:
    metadata:
      labels:
        app: appangular
    spec:
      containers:
      - name: appangular
        image: haroldo89/demo-ingress-ang:3
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 80
