k8/service-angular-nodejs.yaml
# definicion de servicio externo.
apiVersion: v1
kind: Service
metadata:
  name: service-angular-nodejs
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30200
  selector:
    app: app-angular-nodejs
