k8/service-angular.yaml
# definicion de servicio interno.
apiVersion: v1
kind: Service
metadata:
  name: appangular-internal-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: appangular
