k8/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-front-service-clusterip
spec:
  selector:
    app: angular-front-app-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
