k8/service.yaml
# definicion de servicio interno.
apiVersion: v1
kind: Service
metadata:
  name: service-internal-angular
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-angular
---
# definicion de servicio externo.
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport-angular
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32200
  selector:
    app: app-angular
